UPDATE several dependencies and specs